test/files/neg/t7187-2.13.scala
class EtaExpandZeroArg {
  def foo() = ""
  val f: () => Any = foo
}
