test/files/neg/t7187-2.13.check
t7187-2.13.scala:3: error: type mismatch;
 found   : String
 required: () => Any
  val f: () => Any = foo
                     ^
one error found
